fixed mobile overflow

--- a/assets/css/style-mobile.css
+++ b/assets/css/style-mobile.css
@@ -226,7 +226,7 @@
 	    position: absolute;
 	    top:0;
 	    left: 0;
-	    width: 100%;
+	    width: 320px;
 			height: 100%;
 	 		/*height: 550px;*/
 			/*padding-bottom: 56.25%;*/
